@@ -1,7 +1,7 @@
 TARGET		= alignhash.test alignhash_bench.test fbsearch.test version.test tree.test \
 		list.test listsort.test gcd.test aes.test bitmap.test part.test heapsort.test \
 		comb.test console.test bfilter.test rand.test rc4.test sha256sum.test \
-		avl_bench.test splay_bench.test set_bench.test
+		avl_bench.test splay_bench.test set_bench.test bfilter_bench.test
 
 INCPATH		= ../include
 LIBPATH		= ../lib
