@@ -1,3 +1,6 @@
+Dec. 27th 2011
+	add bloom filter benchmark ut
+
 Oct. 21th 2011
 	add benchmark uts
 
